2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: We have to support removing
	  items from multiple collection view groups now so don't
	  remove empty groups as we iterate, do a separate loop at the
	  end. This can all be done in one loop if I remember to
	  rewrite it later ;)

	* StandardCollectionView.cs: Ensure we remove the item from
	  the root group when the item is filtered out. When finding
	  the correct index of the new item when sorting is enabled,
	  we need to binary search the filteredList, not the source
	  collection. If there's filtering and we binary search teh
	  source collection, we'll get crazy indices and die. Finally
	  use the correct values when raising the collection changed
	  event.

2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: If GroupNameFromItem returns
	  a collection (IList?) we need to enumerate that and add the
	  current item to each CollectionViewGroup in the IList.

	* PropertyGroupDescription.cs: Make GroupNameFromItem a little
	  prettier. Also fix a case of bad caching - we need to null
	  the property path walker whenever the propertyName changes
	  so we re-create a new one with the new path.

	* StandardCollectionView.cs: When calling AddNew () we need to
	  add the item to the group before adding it to the source
	  collection. If we don't IndexOf () the item will return -1
	  when we respond to the INotifyCollectionChanged for the
	  source collection. Also fix some cases where we weren't
	  throwing exceptions in the right place.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathNode.cs:
	* BindingExpressionBase.cs: User Helper.AreEqual as the method
	  of deciding whether or two values are equal.

2010-05-21  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathWalker.cs: Add a helper method "GetValue" to
	  PropertyPathWalker for cases where you just want the value
	  but don't want to attach listeners and all that.
